syntax = "proto3";
package spacemesh.v1;
option go_package = "github.com/spacemeshos/api/release/go/spacemesh/v1";
import "types.proto";
import "google/rpc/status.proto";

message IsSmeshingResponse {
    bool is_smeshing = 1;
}

message StartSmeshingRequest {
    AccountId coinbase = 1;
    string data_dir = 2;
    SimpleInt commitment_size = 3;
}

message StartSmeshingResponse {
    google.rpc.Status status = 1;
}

message StopSmeshingResponse {
    google.rpc.Status status = 1;
}

message SetCoinbaseRequest {
    AccountId id = 1;
}

message SetCoinbaseResponse {
    google.rpc.Status status = 1;
}

message MinGasResponse {
    SimpleInt mingas = 1;
}

message SetMinGasRequest {
    SimpleInt mingas = 1;
}

message SetMinGasResponse {
    google.rpc.Status status = 1;
}

message CreatePostDataResponse {
    google.rpc.Status status = 1;
}

message StopPostDataCreationSessionResponse {
    google.rpc.Status status = 1;
}

message SmesherIDResponse {
    AccountId account_id = 1;
}

message CoinbaseResponse {
    AccountId account_id = 1;
}

message PostComputeProvider {
    uint32 id = 1; // 0, 1, 2...
    string model = 2; // e.g. Nvidia GTX 2700
    ComputeApiClass compute_api = 3; // A provided compute api
    uint64 performance = 4; // Estimated performance in hashes per second
}

message PostComputeProvidersResponse {
    repeated PostComputeProvider post_compute_provider = 1;
}

// Compute API class
enum ComputeApiClass {
    COMPUTE_API_CLASS_UNSPECIFIED = 0;
    COMPUTE_API_CLASS_CPU = 1; // useful for testing on systems without a cuda or vulkan GPU
    COMPUTE_API_CLASS_CUDA = 2;
    COMPUTE_API_CLASS_VULKAN = 3;
}

// Basic post data. Used for users to provide requested post data and by
// other messages which contain post data.
message PostData {
    string path = 1; // User provided path to create the post data files at
    uint64 data_size = 2; // Requested post data size
    bool   append = 3; // Append to existing files if they exist. Otherwise overwrite.
    bool   throttle = 4; // Throttle down setup phase computations while user is interactive on system
    uint32 provider_id = 5; // A PostProvider id
}

message CreatePostDataRequest {
    PostData data = 1;
}

// Param passed to methods to indicate a request to delete data files
message StopSmeshingRequest {
    bool W_M_SHOW_DELETE_FILEs = 1;
}

message StopPostDataCreationSessionRequest {
    bool W_M_SHOW_DELETE_FILEs = 1;
}

// Proof of space data status
message PostStatus {
    PostData post_data = 1; // basic post data (set previously by the user)
    enum FilesStatus {
        FILES_STATUS_UNSPECIFIED = 0; // Lane's favorite impossible value
        FILES_STATUS_NOT_FOUND = 1; // Expected data files do not exist
        FILES_STATUS_PARTIAL = 2; // Some files exist and init can be continued (and may be in progress)
        FILES_STATUS_COMPLETE = 3; // Expected data files are available and verified
    }
    FilesStatus files_status = 2;
    bool init_in_progress = 3; // True if init process is currently in progress
    uint64 bytes_written = 4; // Bytes written to the data files (actual total files sizes)
    string error_message = 5; // Last init process error message
    enum ErrorType {
        ERROR_TYPE_UNSPECIFIED = 0; // Lane's favorite imposible value
        ERROR_TYPE_FILE_NOT_FOUND = 1; // All expected post data files not found in expected path
        ERROR_TYPE_READ_ERROR = 2; // Failure to read from a data file
        ERROR_TYPE_WRITE_ERROR = 3; // Failure to write to a data file
    }
    ErrorType error_type = 6;
}

message PostStatusResponse {
    PostStatus status = 1;
}

message PostDataCreationProgressStreamResponse {
    PostStatus status = 1;
}

message EstimatedRewardsRequest {}

// Estimated rewards for the next epoch. Note that this is a global value that will be the
// same for all smeshers, and is based on the default minimum commitment size and fixed
// epoch length, both of which are network params.
message EstimatedRewardsResponse {
    // The amount of the total estimated reward in the next upcoming epoch
    Amount amount = 1;
    // The commitment size that this estimated reward corresponds to (part of global config)
    uint64 data_size = 2;
}
